syntax = "proto3";

package examplepb;

option go_package = "github.com/018bf/example/pkg/examplepb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message PlanCreate {
  string name = 1;
  uint64 repeat = 2;
  string equipment_id = 3;
}

message PlanGet {
  string id = 1;
}

message PlanUpdate {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.UInt64Value repeat = 3;
  google.protobuf.StringValue equipment_id = 4;
}

message Plan {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string name = 4;
  uint64 repeat = 5;
  string equipment_id = 6;
}

message ListPlan {
  repeated Plan items = 1;
  uint64 count = 2;
}

message PlanDelete {
  string id = 1;
}

message PlanFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
  google.protobuf.StringValue search = 5;
}

service PlanService {
  rpc Create(examplepb.PlanCreate) returns (examplepb.Plan);
  rpc Get(examplepb.PlanGet) returns (examplepb.Plan);
  rpc Update(examplepb.PlanUpdate) returns (examplepb.Plan);
  rpc Delete(examplepb.PlanDelete) returns (google.protobuf.Empty);
  rpc List(examplepb.PlanFilter) returns (examplepb.ListPlan);
}